android/.cxx/cmake/debug/armeabi-v7a/android_gradle_build_cpp_armeabi-v7a.stdout.txt
[1/25] Building CXX object CMakeFiles/cpp.dir/home/laurent/Documents/Programmation/ProjetsPersos/ReactNative/Plugins/react-native-stockfish-android/cpp/example.cpp.o
[2/25] Building CXX object CMakeFiles/cpp.dir/home/laurent/Documents/Programmation/ProjetsPersos/ReactNative/Plugins/react-native-stockfish-android/cpp/Stockfish/benchmark.cpp.o
[3/25] Building CXX object CMakeFiles/cpp.dir/home/laurent/Documents/Programmation/ProjetsPersos/ReactNative/Plugins/react-native-stockfish-android/cpp/Stockfish/bitbase.cpp.o
[4/25] Building CXX object CMakeFiles/cpp.dir/home/laurent/Documents/Programmation/ProjetsPersos/ReactNative/Plugins/react-native-stockfish-android/cpp/Stockfish/bitboard.cpp.o
[5/25] Building CXX object CMakeFiles/cpp.dir/home/laurent/Documents/Programmation/ProjetsPersos/ReactNative/Plugins/react-native-stockfish-android/cpp/Stockfish/book.cpp.o
[6/25] Building CXX object CMakeFiles/cpp.dir/home/laurent/Documents/Programmation/ProjetsPersos/ReactNative/Plugins/react-native-stockfish-android/cpp/Stockfish/endgame.cpp.o
[7/25] Building CXX object CMakeFiles/cpp.dir/home/laurent/Documents/Programmation/ProjetsPersos/ReactNative/Plugins/react-native-stockfish-android/cpp/Stockfish/evaluate.cpp.o
[8/25] Building CXX object CMakeFiles/cpp.dir/home/laurent/Documents/Programmation/ProjetsPersos/ReactNative/Plugins/react-native-stockfish-android/cpp/Stockfish/main.cpp.o
FAILED: /home/laurent/Android/Sdk/ndk/22.0.7026061/toolchains/llvm/prebuilt/linux-x86_64/bin/clang++  --target=armv7-none-linux-androideabi16 --gcc-toolchain=/home/laurent/Android/Sdk/ndk/22.0.7026061/toolchains/llvm/prebuilt/linux-x86_64 --sysroot=/home/laurent/Android/Sdk/ndk/22.0.7026061/toolchains/llvm/prebuilt/linux-x86_64/sysroot  -Dcpp_EXPORTS -I../../../../../cpp -g -DANDROID -fdata-sections -ffunction-sections -funwind-tables -fstack-protector-strong -no-canonical-prefixes -D_FORTIFY_SOURCE=2 -march=armv7-a -mthumb -Wformat -Werror=format-security  -O2 -frtti -fexceptions -Wall -fstack-protector-all -O0 -fno-limit-debug-info  -fPIC   -std=gnu++11 -MD -MT CMakeFiles/cpp.dir/home/laurent/Documents/Programmation/ProjetsPersos/ReactNative/Plugins/react-native-stockfish-android/cpp/Stockfish/book.cpp.o -MF CMakeFiles/cpp.dir/home/laurent/Documents/Programmation/ProjetsPersos/ReactNative/Plugins/react-native-stockfish-android/cpp/Stockfish/book.cpp.o.d -o CMakeFiles/cpp.dir/home/laurent/Documents/Programmation/ProjetsPersos/ReactNative/Plugins/react-native-stockfish-android/cpp/Stockfish/book.cpp.o -c /home/laurent/Documents/Programmation/ProjetsPersos/ReactNative/Plugins/react-native-stockfish-android/cpp/Stockfish/book.cpp
/home/laurent/Documents/Programmation/ProjetsPersos/ReactNative/Plugins/react-native-stockfish-android/cpp/Stockfish/book.cpp:29:10: fatal error: 'malloc/malloc.h' file not found
#include <malloc/malloc.h>
         ^~~~~~~~~~~~~~~~~
1 error generated.
FAILED: /home/laurent/Android/Sdk/ndk/22.0.7026061/toolchains/llvm/prebuilt/linux-x86_64/bin/clang++  --target=armv7-none-linux-androideabi16 --gcc-toolchain=/home/laurent/Android/Sdk/ndk/22.0.7026061/toolchains/llvm/prebuilt/linux-x86_64 --sysroot=/home/laurent/Android/Sdk/ndk/22.0.7026061/toolchains/llvm/prebuilt/linux-x86_64/sysroot  -Dcpp_EXPORTS -I../../../../../cpp -g -DANDROID -fdata-sections -ffunction-sections -funwind-tables -fstack-protector-strong -no-canonical-prefixes -D_FORTIFY_SOURCE=2 -march=armv7-a -mthumb -Wformat -Werror=format-security  -O2 -frtti -fexceptions -Wall -fstack-protector-all -O0 -fno-limit-debug-info  -fPIC   -std=gnu++11 -MD -MT CMakeFiles/cpp.dir/home/laurent/Documents/Programmation/ProjetsPersos/ReactNative/Plugins/react-native-stockfish-android/cpp/Stockfish/main.cpp.o -MF CMakeFiles/cpp.dir/home/laurent/Documents/Programmation/ProjetsPersos/ReactNative/Plugins/react-native-stockfish-android/cpp/Stockfish/main.cpp.o.d -o CMakeFiles/cpp.dir/home/laurent/Documents/Programmation/ProjetsPersos/ReactNative/Plugins/react-native-stockfish-android/cpp/Stockfish/main.cpp.o -c /home/laurent/Documents/Programmation/ProjetsPersos/ReactNative/Plugins/react-native-stockfish-android/cpp/Stockfish/main.cpp
/home/laurent/Documents/Programmation/ProjetsPersos/ReactNative/Plugins/react-native-stockfish-android/cpp/Stockfish/main.cpp:41:14: error: no member named 'init_kpk' in namespace 'Bitbases'
          Bitbases::init_kpk();
          ~~~~~~~~~~^
/home/laurent/Documents/Programmation/ProjetsPersos/ReactNative/Plugins/react-native-stockfish-android/cpp/Stockfish/main.cpp:43:4: error: no member named 'init' in namespace 'Pawns'; did you mean simply 'init'?
          Pawns::init();
          ^~~~~~~~~~~
          init
/home/laurent/Documents/Programmation/ProjetsPersos/ReactNative/Plugins/react-native-stockfish-android/cpp/Stockfish/main.cpp:34:17: note: 'init' declared here
extern "C" void init() {
                ^
/home/laurent/Documents/Programmation/ProjetsPersos/ReactNative/Plugins/react-native-stockfish-android/cpp/Stockfish/main.cpp:44:4: error: no member named 'init' in namespace 'Eval'; did you mean simply 'init'?
          Eval::init();
          ^~~~~~~~~~
          init
/home/laurent/Documents/Programmation/ProjetsPersos/ReactNative/Plugins/react-native-stockfish-android/cpp/Stockfish/main.cpp:34:17: note: 'init' declared here
extern "C" void init() {
                ^
/home/laurent/Documents/Programmation/ProjetsPersos/ReactNative/Plugins/react-native-stockfish-android/cpp/Stockfish/main.cpp:45:12: error: no member named 'init' in 'ThreadPool'
          Threads.init();
          ~~~~~~~ ^
4 errors generated.
ninja: build stopped: subcommand failed.
